--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
-    <div class="flex-grow flex items-center justify-center">
+    <div class="flex-grow flex items-center justify-center min-w-[440px]">
         <iframe
         src="https://udify.app/chatbot/q9i0OloOdtWdPI1C"
-        style="width: 100%; height: 100%; min-height: 700px"
+        style="width: 100%; height: 100%; min-height: 400px; min-width: 440px;"
         frameborder="0"
         allow="microphone">
       </iframe>
