--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Chatbot Page</title>
+    <title>Harris vs Trump Debate Chatbot</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <meta property="og:title" content="Harris vs Trump Debate Chatbot"> <!-- Open Graph Title -->
+    <meta property="og:description" content="A chatbot trained on the transcript of the ABC News debate between Kamala Harris and Donald Trump."> <!-- Open Graph Description -->
+    <meta property="og:image" content="banner.jpg"> <!-- Open Graph Image -->
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
   <div class="max-w-md w-full min-h-screen">
     <h1 class="text-2xl font-bold my-4">
-        ABC News Debate Chatbot
+        Harris vs Trump Debate Chatbot
     </h1>
     <p class="text-sm text-gray-500 mb-4">
         A chatbot "trained" on the transcript of the ABC News debate between Kamala Harris and Donald Trump.
